--- a/html檔/Photographer.html
+++ b/html檔/Photographer.html
@@ -232,7 +232,7 @@
     <!--------------------- header ----------------------->
     <header>
         <div id="logobox">
-            <a href="Home.html">
+            <a href="Home copy.html">
                 <img src="/img/Vesluneir.png">
             </a>
         </div>
@@ -263,7 +263,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="Home copy.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#">Photographer</a>
@@ -273,6 +273,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="Article.html">Article</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="Login.html">Login</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
