--- a/html檔/LookBook.html
+++ b/html檔/LookBook.html
@@ -240,7 +240,7 @@
     <!-------------------- 1. 頁首 ---------------------->
     <header>
         <div id="logobox">
-            <a href="Home.html">
+            <a href="Home copy.html">
                 <img src="/img/Vesluneir.png">
             </a>
         </div>
@@ -271,7 +271,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="Home copy.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="Photographer.html">Photographer</a>
@@ -281,6 +281,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="Article.html">Article</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="Login.html">Login</a>
                         </li>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
