--- a/html檔/Home copy.html
+++ b/html檔/Home copy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -391,18 +391,11 @@
         }
 
         #hbox {
-            border: 2px dashed rgba(250, 241, 241, 0.979);
-            background-image: url(/img/CB2.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            backdrop-filter: blur(30px);
-            background-attachment: fixed;
-            margin-left: 6%;
+            margin-left: 50%;
             position: relative;
             width: 150vmin;
             height: 60vmin;
-            border-radius: 60%;
+            /* border-radius: 60%; */
             display: flex;
             flex-direction: column;
             overflow: visible;
@@ -411,7 +404,7 @@
             transition: opacity 1s ease, transform 1s ease;
             transform: translateY(200px);
             /* 初始位置向下偏移 200px */
-            z-index: 49;
+            z-index: 47;
         }
 
         #hbox.visible {
@@ -423,7 +416,7 @@
 
         #s2 h1 {
             color: rgb(255, 250, 251);
-            font-size: 80px;
+            font-size: 50px;
             font-family: "Alegreya", serif;
             font-optical-sizing: auto;
             font-weight: 550;
@@ -444,7 +437,8 @@
 
         #strbox1,
         #strbox2 {
-            height: auto;
+            border: red 1px solid;
+            /* height: auto; */
             opacity: 0;
             transition: opacity 2s ease, transform 2s ease;
             z-index: 48;
@@ -452,12 +446,13 @@
 
         #strbox1 {
             position: absolute;
-            left: 5%;
-            bottom: 5%;
+            left: 20%;
+            bottom: 9%;
             transform: translateX(-100px) translateY(-50px);
         }
 
         #strbox2 {
+            width: 100%;
             transform: translateX(50px) translateY(100px);
         }
 
@@ -896,7 +891,7 @@
 
     <!------------------ 3. 星星區(S2) --------------------------->
     <!-- 視覺的記憶，在每一個瞬間中蔓延。-->
-    <!--「每一幅畫面，都是沉默中流動的時光遺跡。」 -->
+    <!--「每一幅畫面，。」 -->
 
     <section id="s2">
         <div id="strbox1">
@@ -905,8 +900,8 @@
             <img id="str3" src="/img/Star 8.png">
         </div>
         <div id="hbox">
-            <h1 id="h11">“ Every Moment</h1>
-            <h1 id="h12">Carries an Endless Story. ”</h1>
+            <h1 id="h11">“每一幅畫面</h1>
+            <h1 id="h12"> 都是沉默中流動的時光遺跡”</h1>
         </div>
         <div id="strbox2">
             <img id="str1" src="/img/Star 8.png">
