--- a/html檔/Home copy 2.html
+++ b/html檔/Home copy 2.html
@@ -21,6 +21,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&family=Alegreya:ital,wght@0,483;1,483&family=DotGothic16&family=Kaisei+Decol:wght@500&family=Kaisei+HarunoUmi&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
     <style>
@@ -641,6 +642,11 @@
             z-index: 21;
         }
 
+        .s6box:hover {
+            cursor: pointer;
+            /* 將鼠標變成手掌 */
+        }
+
         #rightimg {
             display: flex;
             justify-content: flex-end;
@@ -893,10 +899,16 @@
         .footer-social a {
             color: #fff;
             text-decoration: none;
+            font-size: 25px;
+            font-family: "Alegreya", "Kaisei HarunoUmi", serif;
+            letter-spacing: 20px;
         }
 
         .footer-social a:hover {
             text-decoration: underline;
+            cursor: pointer;
+            /* 將鼠標變成手掌 */
+
         }
     </style>
 </head>
@@ -1129,10 +1141,9 @@
     <footer id="footer">
         <div class="footer-section2">
             <ul class="footer-social">
-                <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-                <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-                <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+                <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#contact"><i class="fa-regular fa-comment"></i></a></li>
             </ul>
         </div>
     </footer>
@@ -1140,6 +1151,9 @@
 
 
     <!-------------------------- 6. (script專區) -------------------------->
+    <script src="https://kit.fontawesome.com/1bf13e43a0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1bf13e43a0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1bf13e43a0.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
